# CogwareCan

./: .gitignore  README
CogwareCan/RPCLIENT/src/: _dingus.rs
CogwareCan/RPSERVER/: Cargo.toml
CogwareCan/src/: __lib.rs
RPCLIENT/: Cargo.toml
RPCLIENT/gauges/: mod.rs
RPCLIENT/src/: main.rs
RPSERVER/.cargo/: config.toml
RPSERVER/src/: main.rs
dingus/src/: main.rs
