[package]
name = "cogware-canserver"
version = "0.0.1"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
critical-section = "1.1.3"
embedded-alloc = "0.5.1"
embedded-can = "0.4.1"
embedded-hal = "1.0.0"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.7", features = [
  "unproven",
] }
fugit = "0.3.7"
mcp2515 = "0.2.2"
panic-halt = "0.2.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = {version = "0.10.2", features = ["critical-section-impl", "rt", "defmt"]}
smart-leds = "0.3.0"
ws2812-pio = "0.8.0"
cogware-can = {path = "../CogwareCan"}


[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
